[package]
name = "mdview"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dioxus = { version = "0.6", features = ["desktop"] }
pulldown-cmark = { version = "0.12", features = ["simd"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[[bin]]
name = "mdview"
path = "src/mdview.rs"
