[package]
name = "mdview"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pulldown-cmark = { version = "0.12", features = ["simd"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
notify = "6.0"
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

[[bin]]
name = "mdview"
path = "src/mdview.rs"
